# opencv-nodejs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.d.ts  index.js  jest.config.js  package.json  tsconfig.json
.github/workflows/: main.yml
cpp/: CMakeLists.txt
cpp/src/: main.cpp
cpp/src/core/: Mat.cpp  Mat.h  Point.cpp  Point.h  Rect.cpp  Rect.h  RotatedRect.cpp  RotatedRect.h  Size.cpp  Size.h  Vec.cpp  Vec.h
cpp/src/functions/: ImageRead.cpp  ImageRead.h  ImageShow.cpp  ImageShow.h  WaitKey.cpp  WaitKey.h
example/: index.js
test/core/mat/: index.test.ts
test/core/point/: 2d.test.ts  point2.test.ts
test/core/rect/: index.test.ts
test/core/rotatedRect/: index.test.ts  point2.test.ts
test/core/size/: index.test.ts
test/core/vec/: vec2.test.ts  vec3.test.ts  vec4.test.ts
